[package]
name = "fits"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
homepage = "https://github.com/ssmichael1/fits-rs"
repository = "https://github.com/ssmichael1/fits-rs"
documentation = "https://docs.rs/satkit"
keywords = ["NASA", "astronomy", "FITS", "image"]
categories = ["aerospace", "algorithms", "mathematics", "science"]

[lib]
name = "fits"

[dependencies]
bytemuck = { version = "1.21.0", features = ["derive"] }
thiserror = "2.0.11"
nalgebra = "0.33.2"

[build-dependencies]

[features]

[profile.test]
opt-level = 3
inherits = "release"
